--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "Zirui Wang",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "mongoose": "^5.0.15",
     "nodemon": "^1.17.3"
   }
 }
