--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,10 @@
     }
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.43",
     "ajv": "^6.4.0",
     "axios": "^0.18.0",
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.43",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -18,7 +19,8 @@
     "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
